[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Cursor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Arms.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player.png" type="Texture" id=4]

[node name="Player" type="Node2D"]
script = ExtResource( 2 )

[node name="Cursor" parent="." instance=ExtResource( 1 )]

[node name="CursorTimer" type="Timer" parent="Cursor"]
wait_time = 0.05

[node name="Player" type="Sprite" parent="."]
position = Vector2( 320, 300 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
hframes = 3

[node name="LeftArm" type="Sprite" parent="Player"]
position = Vector2( 18.7781, 38.784 )
rotation = 3.14159
scale = Vector2( 1.66667, -1.66667 )
texture = ExtResource( 3 )
hframes = 18
frame = 6

[node name="RightArm" type="Sprite" parent="Player"]
position = Vector2( -22.49, 40.6888 )
rotation = 3.14159
scale = Vector2( 1.66667, -1.66667 )
texture = ExtResource( 3 )
hframes = 18
[connection signal="area_entered" from="Cursor" to="." method="_on_Cursor_area_entered"]
[connection signal="area_exited" from="Cursor" to="." method="_on_Cursor_area_exited"]
[connection signal="timeout" from="Cursor/CursorTimer" to="." method="_on_CursorTimer_timeout"]
